# cifar10_speedrun_agentic

./: AGENTS.md  LICENSE  pyproject.toml
.agents/skills/examples/: skill-prompts.md
.agents/skills/experiment-code-updater/: SKILL.md
.agents/skills/experiment-code-updater/agents/: openai.yaml
.agents/skills/experiment-loop-runner/: SKILL.md
.agents/skills/experiment-loop-runner/agents/: openai.yaml
.agents/skills/experiment-next-step/: SKILL.md
.agents/skills/experiment-next-step/agents/: openai.yaml
.agents/skills/training-log-summarizer/: SKILL.md
.agents/skills/training-log-summarizer/agents/: openai.yaml
scripts/: run_baselines.sh
src/cifar10_speedrun_agentic/: __init__.py  __main__.py  data.py  models.py  train.py
